--- a/OrderProcessing_Complete/Web.config
+++ b/OrderProcessing_Complete/Web.config
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="orderEntities" connectionString="metadata=res://*/OrderModel.csdl|res://*/OrderModel.ssdl|res://*/OrderModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Interviews;user id=Secretary;password=Secretary;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="orderEntities" connectionString="metadata=res://*/OrderModel.csdl|res://*/OrderModel.ssdl|res://*/OrderModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Interviews;user id=userid;password=pwd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
