--- a/OrderProcessing_Complete/Web.config
+++ b/OrderProcessing_Complete/Web.config
@@ -64,7 +64,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings><add name="orderEntities" connectionString="metadata=res://*/OrderModel.csdl|res://*/OrderModel.ssdl|res://*/OrderModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Interviews;user id=Secretary;password=Secretary;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings><add name="orderEntities" connectionString="metadata=res://*/OrderModel.csdl|res://*/OrderModel.ssdl|res://*/OrderModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Interviews;user id=user;password=pwd;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
